# Auto_WeLearn

./: README.md  WeLearn.py  pyproject.toml  requirements.txt  web_app.py
core/: account_manager.py  user_store.py  web_tasks.py
data/: users.json
data/accounts/: admin.json
templates/: admin_users.html  base.html  courses.html  dashboard.html  login.html  register_admin.html  task_detail.html  units.html
