[project]
name = "auto-welearn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyqt5>=5.15.11",
    "requests>=2.32.5",
    "flask>=3.0.0",
]

[tool.uv]
required-environments = [
  "sys_platform == 'win32' and platform_machine == 'AMD64'"
]
